# SS

./: .gitignore  README.md  pyproject.toml  requirements.txt
cpp/frame_extract/: CMakeLists.txt  README.md
cpp/frame_extract/include/: frame_extractor.h
cpp/frame_extract/src/: frame_extractor.cpp  main.cpp
data/: README.md
docs/: PROPOSED_PIPELINE.md  contracts.md
examples/: bad_frame_sample.example.jsonl  bad_media_metadata.example.json  bad_transcript_segment.example.jsonl  bad_video_manifest.example.json  frame_sample.example.jsonl  media_metadata.example.json  transcript_segment.example.jsonl  video_manifest.example.json
tests/: conftest.py  test_caption_frames.py  test_extract_audio.py  test_io_utils.py  test_probe_media.py  test_register_video.py  test_run_ocr.py  test_sample_frames.py  test_sample_frames_integration.py  test_schemas.py  test_transcribe_audio.py  test_transcription_providers.py  test_validate.py
video_rag/: __init__.py  io_utils.py  schemas.py  validate.py
video_rag/index/: __init__.py  caption_frames.py  extract_audio.py  probe_media.py  register_video.py  run_ocr.py  sample_frames.py  transcribe_audio.py  transcription_providers.py
