[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-rag"
version = "0.0.1"
description = "RAGGERS — toy video RAG demo (Stage 0-lite: shared data contracts)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
raggers-validate = "video_rag.validate:main"

[tool.setuptools.packages.find]
include = ["video_rag*"]
exclude = ["tests*", "data*", "docs*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
